--- a/style.css
+++ b/style.css
@@ -312,3 +312,39 @@ header .navLogin a { /* signup button */
   background-color: #111;
 }
 /* END ADD PRODUCT */
+
+/* Card */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 200px;
+  max-height: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  display: block;
+}
+.card .title {
+  color: grey;
+  font-size: 18px;
+}
+.card button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+.card a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+.card button:hover, a:hover {
+  opacity: 0.7;
+}
+/* END CARD */
