--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ body { /* entire page */
 header nav { /* header */
   width: 100%;
   height: 60px; /* header height */
-  background-color: #b3ffff; /* white */
-  opacity: 0.8;
+  background-color: #e67e00; /* white */
+  opacity: 1;
 }
 header nav ul { /* epay logo */
   float: left;
