--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a {
   text-decoration: none; /* remove underline */
 }
 body { /* entire page */
-  background-color: #f2f2f2;
+  background-color: #fff;
   opacity: 0.8;
   font-family: "Lato", sans-serif;
 }
