--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body { /* entire page */
 header nav { /* header */
   width: 100%;
   height: 60px; /* header height */
-  background-color: #e67e00; /* white */
+  background-color: #e67e00;
   opacity: 1;
 }
 header nav ul { /* epay logo */
@@ -116,6 +116,7 @@ header nav ul { /* epay logo */
 header nav ul li { /* epay logo */
   float: left;
   list-style: none; /* no bullet point */
+
 }
 header nav ul li a { /* epay logo */
   font-family: arial;
