--- a/style.css
+++ b/style.css
@@ -99,7 +99,8 @@ a {
   text-decoration: none; /* remove underline */
 }
 body { /* entire page */
-  opacity: 0.9;
+  background-color: #fff;
+  opacity: 0.8;
   font-family: "Lato", sans-serif;
 }
 
@@ -107,7 +108,7 @@ body { /* entire page */
 header nav { /* header */
   width: 100%;
   height: 60px; /* header height */
-  background-color: #e67e00;
+  background-color: #e67e00; /* white */
   opacity: 1;
 }
 header nav ul { /* epay logo */
@@ -116,11 +117,10 @@ header nav ul { /* epay logo */
 header nav ul li { /* epay logo */
   float: left;
   list-style: none; /* no bullet point */
-
 }
 header nav ul li a { /* epay logo */
-  font-family: arial;
-  font-size: 16px;
+  font-family: skia;
+  font-size: 28px;
   color: #111; /* dark grey */
   line-height: 63px; /* center on header height */
 }
